zerocopy-derive/tests/ui/union.stderr
error: unsupported on unions
  --> $DIR/union.rs:10:10
   |
10 | #[derive(FromBytes)]
   |          ^^^^^^^^^
   |
   = note: this error originates in the derive macro `FromBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unsupported on unions
  --> $DIR/union.rs:13:10
   |
13 | #[derive(Unaligned)]
   |          ^^^^^^^^^
   |
   = note: this error originates in the derive macro `Unaligned` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unions cannot have zero fields
  --> $DIR/union.rs:11:1
   |
11 | union Foo {}
   | ^^^^^^^^^^^^

error: unions cannot have zero fields
  --> $DIR/union.rs:14:1
   |
14 | union Bar {}
   | ^^^^^^^^^^^^

error: aborting due to 4 previous errors

